Modificacion en wizard, checado y corregido wizard 100% Falta checar actualizacion de datatable

--- a/src/main/webapp/vistas/gestores/Create.xhtml
+++ b/src/main/webapp/vistas/gestores/Create.xhtml
@@ -172,7 +172,7 @@
                                         <h:outputText value="#{gestoresController.selected.designador.cargo}" styleClass="outputLabel"/>
                                     </p:panelGrid>  
                                 <p:commandButton immediate="true" value="Crear" update="@parent,:GestoresCreateForm:growl1,:GestoresListForm:datalist" actionListener="#{gestoresController.create}" oncomplete="PF('wiz').loadStep('tabGestor', false)"/>                           
-                                <p:commandButton value="#{bundle.Cancel}" actionListener="#{gestoresController.reset}"  oncomplete="PF('wiz').loadStep('tabGestor', false)"/>
+                                <p:commandButton value="#{bundle.Cancel}" actionListener="#{gestoresController.reset}"  oncomplete="PF('wiz').loadStep('tabGestor',true)"/>
                                 
                                 </p:panelGrid>
                             </p:panel>                             
