--- a/src/main/webapp/template.xhtml
+++ b/src/main/webapp/template.xhtml
@@ -37,6 +37,11 @@
                             <p:menuitem value="Instituciones" outcome="/vistas/instituciones/List.xhtml" />
                             <p:menuitem value="Personas" outcome="/vistas/personas/List.xhtml" />
                             <p:menuitem value="Gestores" outcome="/vistas/gestores/List.xhtml" />
+                            <p:menuitem value="Solicitudes Internt" outcome="/vistas/solicitudesInternet/List.xhtml" />
+                            <p:menuitem value="Control Solicitudes" outcome="/vistas/controlsolicitudes/List.xhtml" />
+                            <p:menuitem value="Usuarios" outcome="/vistas/personalatencionusuarios/List.xhtml" />
+                            <p:menuitem value="Notas" outcome="/vistas/notas/List.xhtml" />
+                            <p:menuitem value="Documentos notas" outcome="/vistas/documentosnotas/List.xhtml" />
                             <p:submenu label="Prueba">
                                 <p:menuitem value="create" outcome="/vistas/gestores/Crear" />
                             </p:submenu>
