--- a/src/main/webapp/vistas/gestores/List.xhtml
+++ b/src/main/webapp/vistas/gestores/List.xhtml
@@ -106,15 +106,16 @@
                             <f:facet name="header">
                                 <h:outputText value="#{bundle.ListGestoresTitle_designador}"/>
                             </f:facet>
-                            <h:outputText value="#{item.designador}"/>
+                            <p:graphicImage   value="#{gestoresController.imgDesignacion}" cache="false" height="50" width="50" >
+                                <f:param id="img_designacion" name="img_designacion" value="#{item.gestor}" />
+                            </p:graphicImage>
                         </p:column>
                         <f:facet name="footer">
                             <p:commandButton id="createButton" icon="ui-icon-plus"   value="#{bundle.Create}" actionListener="#{gestoresController.prepareCreate}" update=":GestoresCreateForm" oncomplete="PF('GestoresCreateDialog').show()"/>
                             <p:commandButton id="viewButton"   icon="ui-icon-search" value="#{bundle.View}" update=":GestoresViewForm" oncomplete="PF('GestoresViewDialog').show()" disabled="#{empty gestoresController.selected}"/>
                             <p:commandButton id="editButton"   icon="ui-icon-pencil" value="#{bundle.Edit}" update=":GestoresEditForm" oncomplete="PF('GestoresEditDialog').show()" disabled="#{empty gestoresController.selected}"/>
                         </f:facet>
-                    </p:dataTable>
-                    <p:graphicImage id="photo" value="#{gestoresController.foto}" cache="false" height="50" width="50" />
+                    </p:dataTable>                   
                 </p:panel>
             </h:form>
 
