Images 75% Mostrar y subir imagenes de las personas

--- a/src/main/webapp/vistas/gestores/List.xhtml
+++ b/src/main/webapp/vistas/gestores/List.xhtml
@@ -55,9 +55,45 @@
                             <f:facet name="header">
                                 <h:outputText value="Gestor Imagenes"/>
                             </f:facet>
-                            <p:link outcome="verImg" value="CREDRENCIAL ANV">
+                            <p:link outcome="verImg" value="ID ANV">
                                 <f:param  name="idpersonas" value="#{item.idpersona.idpersona}" />
                                 <f:param  name="atributo" value="idoficialanv" />
+                            </p:link>
+                            <p:link outcome="verImg" value="  ID REV">
+                                <f:param  name="idpersonas" value="#{item.idpersona.idpersona}"/>
+                                <f:param  name="atributo" value="idoficialrev" />
+                            </p:link> <br/>
+                            <p:link outcome="verImg" value="CRED ANV">
+                                <f:param  name="idpersonas" value="#{item.idpersona.idpersona}"/>
+                                <f:param  name="atributo" value="credoficialanv" />
+                            </p:link> 
+                            <p:link outcome="verImg" value="  CRED REV">
+                                <f:param  name="idpersonas" value="#{item.idpersona.idpersona}"/>
+                                <f:param  name="atributo" value="credoficialrev" />
+                            </p:link> <br/>
+                            <p:link outcome="verImg" value="MANO IZQ">
+                                <f:param  name="idpersonas" value="#{item.idpersona.idpersona}"/>
+                                <f:param  name="atributo" value="huellamanoizq" />
+                            </p:link>
+                            <p:link outcome="verImg" value="  MANO DER">
+                                <f:param  name="idpersonas" value="#{item.idpersona.idpersona}"/>
+                                <f:param  name="atributo" value="huellamanoder" />
+                            </p:link> <br/>
+                            <p:link outcome="verImg" value="PULGAR">
+                                <f:param  name="idpersonas" value="#{item.idpersona.idpersona}"/>
+                                <f:param  name="atributo" value="huellapulgar" />
+                            </p:link> <br/>
+                            <p:link outcome="verImg" value="FOTO">
+                                <f:param  name="idpersonas" value="#{item.idpersona.idpersona}"/>
+                                <f:param  name="atributo" value="foto" />
+                            </p:link> <br/>
+                            <p:link outcome="verImg" value="CURP">
+                                <f:param  name="idpersonas" value="#{item.idpersona.idpersona}"/>
+                                <f:param  name="atributo" value="imgcurp" />
+                            </p:link> <br/>
+                            <p:link outcome="verImg" value="NOMBRAMIENTO">
+                                <f:param  name="idpersonas" value="#{item.idpersona.idpersona}"/>
+                                <f:param  name="atributo" value="nombramiento" />
                             </p:link>
                         </p:column>                        
                         <p:column>
@@ -70,9 +106,45 @@
                             <f:facet name="header">
                                 <h:outputText value="Desigandor Imagenes"/>
                             </f:facet>
-                            <p:link outcome="verImg" value="CREDRENCIAL ANV">
+                            <p:link outcome="verImg" value="ID ANV">
                                 <f:param  name="idpersonas" value="#{item.designador.idpersona}"/>
                                 <f:param  name="atributo" value="idoficialanv" />
+                            </p:link> 
+                            <p:link outcome="verImg" value="  ID REV">
+                                <f:param  name="idpersonas" value="#{item.designador.idpersona}"/>
+                                <f:param  name="atributo" value="idoficialrev" />
+                            </p:link> <br/>
+                            <p:link outcome="verImg" value="CRED ANV">
+                                <f:param  name="idpersonas" value="#{item.designador.idpersona}"/>
+                                <f:param  name="atributo" value="credoficialanv" />
+                            </p:link> 
+                            <p:link outcome="verImg" value="  CRED REV">
+                                <f:param  name="idpersonas" value="#{item.designador.idpersona}"/>
+                                <f:param  name="atributo" value="credoficialrev" />
+                            </p:link> <br/>
+                            <p:link outcome="verImg" value="MANO IZQ">
+                                <f:param  name="idpersonas" value="#{item.designador.idpersona}"/>
+                                <f:param  name="atributo" value="huellamanoizq" />
+                            </p:link>
+                            <p:link outcome="verImg" value="  MANO DER">
+                                <f:param  name="idpersonas" value="#{item.designador.idpersona}"/>
+                                <f:param  name="atributo" value="huellamanoder" />
+                            </p:link> <br/>
+                            <p:link outcome="verImg" value="PULGAR">
+                                <f:param  name="idpersonas" value="#{item.designador.idpersona}"/>
+                                <f:param  name="atributo" value="huellapulgar" />
+                            </p:link> <br/>
+                            <p:link outcome="verImg" value="FOTO">
+                                <f:param  name="idpersonas" value="#{item.designador.idpersona}"/>
+                                <f:param  name="atributo" value="foto" />
+                            </p:link> <br/>
+                            <p:link outcome="verImg" value="CURP">
+                                <f:param  name="idpersonas" value="#{item.designador.idpersona}"/>
+                                <f:param  name="atributo" value="imgcurp" />
+                            </p:link> <br/>
+                            <p:link outcome="verImg" value="NOMBRAMIENTO">
+                                <f:param  name="idpersonas" value="#{item.designador.idpersona}"/>
+                                <f:param  name="atributo" value="nombramiento" />
                             </p:link>
                         </p:column>
                         <p:column>
